--- a/package.json
+++ b/package.json
@@ -26,18 +26,20 @@
   "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
+    "babel-jest": "^26.5.2",
     "lodash.clonedeep": "^4.5.0",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.0",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-env": "^7.12.0",
     "@babel/preset-react": "^7.10.4",
     "@types/jest": "^26.0.8",
     "autoprefixer": "^9.8.6",
@@ -56,7 +58,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.2.2",
+    "jest": "^26.5.3",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.2.3",
