--- a/package.json
+++ b/package.json
@@ -28,39 +28,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.4.0",
     "babel-jest": "^26.6.3",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^3.2.3",
     "lodash.clonedeep": "^4.5.0",
     "normalize.css": "^8.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-redux": "^7.2.2",
     "react-test-renderer": "^16.14.0",
-    "redux": "^4.0.5",
-    "redux-saga": "^1.1.3"
+    "rxjs": "^7.2.0",
+    "typescript": "^4.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.5",
-    "@types/jest": "^26.0.15",
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@types/jest": "^26.0.23",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.1",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.3.1",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^4.3.0",
     "dotenv-webpack": "^2.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.5",
-    "enzyme-to-json": "^3.6.1",
-    "eslint": "^7.13.0",
+    "eslint": "^7.30.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.24.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^4.5.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "postcss-import": "^12.0.1",
@@ -70,8 +65,8 @@
     "prop-types": "^15.7.2",
     "style-loader": "^1.3.0",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
+    "webpack": "^5.42.1",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.2"
   }
 }
